--- a/fe-w3-shopping/index.html
+++ b/fe-w3-shopping/index.html
@@ -704,7 +704,7 @@
             <span class="txt_bar narrow_hide"></span>
             <strong class="screen_out">쇼핑하우 스페셜 메뉴</strong>
             <ul class="list_kwordgnb">
-              <li>
+              <!-- <li>
                 <a href="/siso/p/bestRank/C02/102105/102105105" data-gg="{lk:pc_gnb_menu_special_1,o1:1}" class="link_shwgnb _GC_" target="_self"> #건강식품 </a>
               </li>
 
@@ -726,7 +726,7 @@
 
                   #노트북
                 </a>
-              </li>
+              </li> -->
             </ul>
 
             <strong class="screen_out">쇼핑하우 사용자 메뉴</strong>
@@ -822,7 +822,7 @@
                   <div class="slide" id="mallEventSlide" style="position: relative; top: 0px; transform: translate3d(0px, 0px, 0px); left: -1280px; width: 3840px">
                     <div class="panel" aria-hidden="true" style="height: 100%; overflow: hidden; display: inline-block; transform: translate3d(0px, 0px, 0px); width: 1280px">
                       <ul class="list_item">
-                        <li class="fst _GI_" data-gg="{d:53972,s:lotte,o1:1,o2:1}">
+                        <!-- <li class="fst _GI_" data-gg="{d:53972,s:lotte,o1:1,o2:1}">
                           <a href="/event/detail/53972/prodid:S9262487998" class="link_prod _GC_"
                             ><span class="info_thumb"
                               ><img
@@ -946,12 +946,12 @@
                             ><strong class="tit_g">매력 넘치는 브랜드 어프어프</strong><span class="txt_info">귀엽고 특이한 디자인으로 모아봤어요.</span
                             ><span class="ico_comm2 ico_theme">테마</span></a
                           >
-                        </li>
+                        </li> -->
                       </ul>
                     </div>
                     <div class="panel" aria-hidden="true" style="height: 100%; overflow: hidden; display: inline-block; transform: translate3d(0px, 0px, 0px); width: 1280px">
                       <ul class="list_item">
-                        <li class="fst _GI_" data-gg="{d:53949,s:musinsa2,o1:1,o2:1}">
+                        <!-- <li class="fst _GI_" data-gg="{d:53949,s:musinsa2,o1:1,o2:1}">
                           <a href="/event/detail/53949/prodid:F11847141813" class="link_prod _GC_"
                             ><span class="info_thumb"
                               ><img
@@ -1011,7 +1011,7 @@
                             ><strong class="tit_g">클래식한 분위기, 라코스테</strong><span class="txt_info">남녀공용 라코스테 가디건 한눈에 모아보기</span
                             ><span class="ico_comm2 ico_theme">테마</span></a
                           >
-                        </li>
+                        </li> -->
                       </ul>
                     </div>
                   </div>
@@ -1025,7 +1025,7 @@
                 <div class="tit_info"><h3 class="tit_home">품절주의! 역대급 핫딜</h3></div>
                 <div class="cont_item">
                   <ul class="list_item _GL" data-gg="{lk:pc_top_hotdeal_slot}">
-                    <li class="_GI_">
+                    <!-- <li class="_GI_">
                       <a
                         href="http://ammonia.daum.net/cptclick?contentseq=1806910&amp;puid=103180660976007314&amp;pagenum=1&amp;impprodnum=0&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
                         class="link_prod _GC_"
@@ -1066,8 +1066,8 @@
                           ><span class="screen_out">정가</span><span class="txt_price">17,900<span class="screen_out">원</span></span></span
                         ></a
                       >
-                    </li>
-                    <li class="_GI_">
+                    </li> -->
+                    <!-- <li class="_GI_">
                       <a
                         href="http://ammonia.daum.net/cptclick?contentseq=1806760&amp;puid=103180660976007314&amp;pagenum=1&amp;impprodnum=3&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
                         class="link_prod _GC_"
@@ -1307,7 +1307,7 @@
                       /><strong class="tit_g">CRP-ST1010</strong><span class="txt_desc"><span class="num_price">267,960</span>원</span></a
                     >
                   </li>
-                </ul>
+                </ul> -->
                 <span class="bg_loading" style="display: none"><span class="ico_home">상품 목록 로딩 중</span></span>
               </div>
             </div>
@@ -1323,7 +1323,7 @@
                 <div class="cate_partner">
                   <strong class="tit_mall">오픈마켓</strong>
                   <ul class="list_mall">
-                    <li class="_GI_" data-gg="{s:gmarket}">
+                    <!-- <li class="_GI_" data-gg="{s:gmarket}">
                       <a
                         href="/go.daum?skey=khHIuvJRdeuwbMZe3a7apMkP8WtSSMBu7Uj_A4HiCyhMpMdzTWk6MsUJ5MD75rJQlXKmuJJP3m5Kzmok4OO35TtHfnb_4x3bkl86tdJXz2SC8HnuOtlBQ83Rbj_bhmAykEDJJ&amp;val=C_w00UiFqM_1FgOR1oUd6x6UylO2S.suopdn6kaTWGMsTlVJ9etDxen7FA2HwIY-NhRGMHEA1E9cS.E50"
                         target="_blank"
@@ -1431,13 +1431,13 @@
                         class="link_mall _GC_"
                         >SM면세점</a
                       >
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
                 <div class="cate_partner">
                   <strong class="tit_mall">홈쇼핑</strong>
                   <ul class="list_mall">
-                    <li class="_GI_" data-gg="{s:cjmall}">
+                    <!-- <li class="_GI_" data-gg="{s:cjmall}">
                       <a
                         href="/go.daum?skey=z2E9QdpUGk62.vtpmzO6U4ORNo19jcYU91EMbmqGmkOAzL1d3VIvgBt558M766qVYLEQ5B-Pw63TKuEVP-mDO-yr1lZBwN6LAXucZlCE94ecee5P6nk3BDkkWub8X-tRL9i76&amp;val=C_w00UiFqM_1FgOR1oUd6x6UylO2S.suopdn6kaTWGMsTlVJ9etDxen7FA2HwIY-NhRGMHEA1E9cS.E50"
                         target="_blank"
@@ -1508,13 +1508,13 @@
                         class="link_mall _GC_"
                         >공영홈쇼핑</a
                       >
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
                 <div class="cate_partner">
                   <strong class="tit_mall">마트/생활</strong>
                   <ul class="list_mall">
-                    <li class="_GI_" data-gg="{s:homeplus}">
+                    <!-- <li class="_GI_" data-gg="{s:homeplus}">
                       <a
                         href="/go.daum?skey=y8Yk0OZDs.i_1vOIKChR6mf8ob9Mk-prep3aGGkyOT-d8PnpcJGrn_aqk4qI6td9ZZvntnlBfqyxpM3mTb74sJ7sita29vYeD2K_mmf19vGQAjRaKmwIEoLgzAetpv7BkMxQkrk9rEJgEzv3NEiepLkXZxg00&amp;val=C_w00UiFqM_1FgOR1oUd6x6UylO2S.suopdn6kaTWGMsTlVJ9etDxen7FA2HwIY-NhRGMHEA1E9cS.E50"
                         target="_blank"
@@ -1609,13 +1609,13 @@
                         class="link_mall _GC_"
                         >다이소몰</a
                       >
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
                 <div class="cate_partner">
                   <strong class="tit_mall">소셜</strong>
                   <ul class="list_mall">
-                    <li class="_GI_" data-gg="{s:g9today}">
+                    <!-- <li class="_GI_" data-gg="{s:g9today}">
                       <a
                         href="/go.daum?skey=v_nCB8LteywvILmKAXXT9STa9TLWTM7.t73-UpWOla2WF5C.pg1liRjtYV.ZO63vAk9Fhz7IuUDeeinS2D3rdbncC9RscgApYmq8n1HDOC5oVc4eNbp5UhblpsKjKS1VfjkBm&amp;val=C_w00UiFqM_1FgOR1oUd6x6UylO2S.suopdn6kaTWGMsTlVJ9etDxen7FA2HwIY-NhRGMHEA1E9cS.E50"
                         target="_blank"
@@ -1747,13 +1747,13 @@
                         class="link_mall _GC_"
                         >프리쉽</a
                       >
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
                 <div class="cate_partner">
                   <strong class="tit_mall">레저/취미</strong>
                   <ul class="list_mall">
-                    <li class="_GI_" data-gg="{s:okoutdoor1024}">
+                    <!-- <li class="_GI_" data-gg="{s:okoutdoor1024}">
                       <a
                         href="/go.daum?skey=2UFg0ulwzmCscR6FQFvJ7RCkfMQqhiosFJWZinLpFK6iaB1IcjmoXOLUxNCsS3OS-sAavcVcfynkBImdUazDnOiBwixb46nihz-UZMnU_amP4UUcR.Gnmocab-fNyEoinyGZCCE.nxtHs_A76REkiuYx8XQ00&amp;val=C_w00UiFqM_1FgOR1oUd6x6UylO2S.suopdn6kaTWGMsTlVJ9etDxen7FA2HwIY-NhRGMHEA1E9cS.E50"
                         target="_blank"
@@ -1813,7 +1813,7 @@
                         class="link_mall _GC_"
                         >인터파크 티켓</a
                       >
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
               </div>
