[HTML] 버튼 2개 수정 완료2

--- a/fe-w3-shopping/index.html
+++ b/fe-w3-shopping/index.html
@@ -177,7 +177,7 @@
               </li>
               <li class="recent--product">
                 <!-- 2019-08-01 'on'클래스를 주면 최근본 상품 레이어가 활성화 됩니다. -->
-                <a href="#none" class="link--product">
+                <a href="#" class="link--product">
                   <span class="ico--background ico--product"></span>최근본
                   상품<span class="ico--background ico--arrow"> 펼치기</span
                   ><!-- 2019-08-01 최근 상품 레이어가 펼쳐졌을 경우 '접기', 잡혀 있을경우 '펼치기'텍스트를 넣어주세요. -->
@@ -1393,13 +1393,13 @@
             <div class="wrap_link">
               <div class="inner_link">
                 <a
-                  href="https:http://buy.kakao.com/about/11/terms"
+                  href="http://buy.kakao.com/about/11/terms"
                   target="_blank"
                   class="link_info _GC_"
                   >서비스 약관/정책</a
                 ><span class="txt_bar">|</span
                 ><a
-                  href="https:http://buy.kakao.com/about/11/privacy"
+                  href="http://buy.kakao.com/about/11/privacy"
                   target="_blank"
                   class="link_info _GC_"
                   ><strong>개인정보처리방침</strong></a
@@ -1471,7 +1471,7 @@
               <small class="txt_copyright">
                 Copyright ©
                 <a
-                  href="https:http://kakaocommerce.com/"
+                  href="http://kakaocommerce.com/"
                   class="link_kakaocommerce _GC_"
                   >kakaocommerce</a
                 >
