[HTML] 버튼 2개 수정 완료3

--- a/fe-w3-shopping/index.html
+++ b/fe-w3-shopping/index.html
@@ -21,7 +21,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="main.scss" />
+    <!-- <link rel="stylesheet" type="text/css" href="main.scss" /> -->
+    <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
     <div class="body__container">
